add email verification mechanism
* introduce salt and sendgrid api env variables to docker-compose and travis
* add sendgrid dependency to requirements
* modify openapi definition for new endpoint with email confirmation
* set security_password_salt in app config
* split api_utils to auth and emails utils modules
* add safe url serialization methods for email confirmation links
* implement send_email method using sendgrid api
*  refactor signup_user methods to add email confirmation login
* add email and email_confirmed fields to the Users db model
* add account activation email template
* modify init_db script to include example email addresses
